5-dars-figma-full project

--- a/index.html
+++ b/index.html
@@ -164,6 +164,134 @@
         </div>
         <div class="bac_img"><img src="img/bac.png" alt="rasm" /></div>
       </div>
+      <div class="mah">
+        <div class="mah_img">
+          <img src="img/rasm.png" alt="rasm" />
+        </div>
+        <div class="mah_mal">
+          <h3>Pure Bliss Mouthwash - <br />Refresh Your Smile Naturally</h3>
+          <p>
+            Say goodbye to harsh chemicals and hello to a naturally invigorated
+            smile. Feel the difference of pure, organic oral care with every
+            swish.
+          </p>
+          <button>
+            <a href="#"
+              >SHOP NOW
+              <img src="img/trel_r.png" alt="rasm" width="24px" height="24px"
+            /></a>
+          </button>
+        </div>
+      </div>
+      <div class="coment">
+        <h2>Testimonials</h2>
+        <p>Hear what our customers say</p>
+        <div class="foy">
+          <div class="conta">
+            <div class="conta_mal">
+              <p>
+                Quite different!! You can feel the difference between
+                chemical-based and natural toothpaste. I felt better after using
+                Tea tree & Charcoal tooth paste.
+              </p>
+            </div>
+            <div class="cont">
+              <img src="img/cont1.png" alt="rasm" />
+              <div class="cont_tx">
+                <p>Courtney Henry</p>
+                <span>Costomer</span>
+              </div>
+              <div class="con_tx"><img src="img/Icon.png" alt="rasm" /></div>
+            </div>
+          </div>
+          <div class="conta">
+            <div class="conta_mal">
+              <p>
+                Quite different!! You can feel the difference between
+                chemical-based and natural toothpaste. I felt better after using
+                Tea tree & Charcoal tooth paste.
+              </p>
+            </div>
+            <div class="cont">
+              <img src="img/cont2.png" alt="rasm" />
+              <div class="cont_tx">
+                <p>Courtney Henry</p>
+                <span>Costomer</span>
+              </div>
+              <div class="con_tx"><img src="img/Icon.png" alt="rasm" /></div>
+            </div>
+          </div>
+          <div class="conta">
+            <div class="conta_mal">
+              <p>
+                Quite different!! You can feel the difference between
+                chemical-based and natural toothpaste. I felt better after using
+                Tea tree & Charcoal tooth paste.
+              </p>
+            </div>
+            <div class="cont">
+              <img src="img/cont3.png" alt="rasm" />
+              <div class="cont_tx">
+                <p>Courtney Henry</p>
+                <span>Costomer</span>
+              </div>
+              <div class="con_tx"><img src="img/Icon.png" alt="rasm" /></div>
+            </div>
+          </div>
+        </div>
+        <div class="rectangle">
+          <div class="news1"></div>
+          <div class="news"></div>
+          <div class="news"></div>
+          <div class="news"></div>
+        </div>
+      </div>
+      <div class="foter">
+        <div class="f_left">
+          <img src="img/logoimg.png" alt="rasm" />
+          <p>
+            Eco Dental is your go-to destination for premium natural oral care
+            products. We are dedicated to providing you with a holistic approach
+            to dental hygiene, harnessing the power of nature to promote a
+            healthy smile.
+          </p>
+          <div class="mesengr">
+            <a href="#"
+              ><img src="img/Facebook Icon.png" alt="rasm" />
+              <img src="img/Linkedin Icon.png" alt="rasm" />
+              <img src="img/insta.png" alt="rasm" />
+              <img src="img/Twitter(1).png" alt="rasm" />
+              <img src="img/youtube.png" alt="rasm"
+            /></a>
+          </div>
+        </div>
+        <div class="f_midle">
+          <p>Quick Links</p>
+          <div class="f_linklar">
+            <ul>
+              <li class="item">
+                <a href="#">Our Story</a>
+              </li>
+              <li class="item">
+                <a href="#">Contact Us</a>
+              </li>
+              <li class="item">
+                <a href="#">Shipping & Delivery</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <div class="f_right">
+          <form class="from">
+            <label for="email"
+              >Receive offers & discounts via e-mail <br />
+              <input class="input" type="email" placeholder="Enter Email" id="email" />
+              <button class="btn">Subscribe</button>
+            </label>
+          </form>
+          <br />
+        </div>
+      </div>
     </div>
   </body>
 </html>
