--- a/index.html
+++ b/index.html
@@ -285,11 +285,27 @@
           <form class="from">
             <label for="email"
               >Receive offers & discounts via e-mail <br />
-              <input class="input" type="email" placeholder="Enter Email" id="email" />
+              <input
+                class="input"
+                type="email"
+                placeholder="Enter Email"
+                id="email"
+              />
               <button class="btn">Subscribe</button>
             </label>
           </form>
           <br />
+        </div>
+      </div>
+      <hr />
+      <div class="fotr_end">
+        <p>© 2024, Eco Dental - All rights reserved.</p>
+        <div class="rotr_end--a">
+          <ul>
+            <li><a href="#">Terms & Conditions</a></li>
+            <li><a href="#">Privacy Policy</a></li>
+            <li><a href="#">Refund Policy</a></li>
+          </ul>
         </div>
       </div>
     </div>
